// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Items/Category Card Simple Card Left Aligned Light Background 1`] = `
<div
  className="sc-bdnylx hgtihd"
  width={50}
>
  <img
    alt="Ice Cream image"
    src="category_groceries.jpg"
  />
  <div
    className="name"
  >
    Ice Cream
  </div>
  <div
    className="brands"
  >
    8
     brands
  </div>
</div>
`;

exports[`Storyshots Items/Category Card Simple Card Right Aligned Dark Background 1`] = `
<div
  className="sc-bdnylx faYFRe"
  width={50}
>
  <img
    alt="Ice Cream image"
    src="category_icecream.jpg"
  />
  <div
    className="name"
  >
    Ice Cream
  </div>
  <div
    className="brands"
  >
    8
     brands
  </div>
</div>
`;
